--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+server.servlet.context-path=/customer-1
 
 #kafka consumers
 spring.kafka.consumer.bootstrap-servers=localhost:9092
